themes/patchxr-hugo/assets/scss/components/_navigation.scss
.bg-black {background-color:$black!important;}

/* .navbar { border-bottom: 1px solid $white;} */

.main-nav{
	background: $black;
	color: $light!important;
	width: 100%;
	position: fixed;
	transition: top 0.3s; /* Transition effect when sliding down (and up) */
	z-index: 50;
	height: 56px;
	text-transform: none!important;
	.navbar-brand{
		img {max-width:100px}
		padding-left: 10px;
		@include desktop {
		padding-left: 10px;
		}
	}
	.navbar-nav{
		.nav-item{
			list-style: none!important;
			position: relative;
			font-family: $primary-font;
			
			.nav-link{
				text-decoration: none!important;
				position: relative;
				text-align: left;
				color: $light;
				padding-right: 20px;
				line-height: 40px;
				padding: .3rem 2.5rem;

			}
			&:hover {background-color: $black;}
			&.active{
				.nav-link{
					color: $nicepurple;
					&:before{
						@include tablet {
							content: none;
						}
						content: '';
						background: $primary-color;
						width: 100%;
						height: 4px;
						position: absolute;
						top: 0;
						left: 0;
					}
				}
			}
		}
	}
	.dropdown-slide {
	  position: static;
	  .open>a, .open>a:focus, .open>a:hover {
	    background: transparent;
	  }
	  &.full-width {
	    .dropdown-menu {
	      left:0!important;
	      right:0!important;
	    }
	  }
	  &:hover .dropdown-menu {
	    display:none;
	    opacity: 1;
	    display: block;
	    transform: translate(0px ,0px);
	    opacity: 1;
	    visibility: visible;
	    color: #777;
	    transform: translateY(0px);
	    @include tablet {
    	    transform: none;
		    left: auto;
		    position: relative;
		    text-align: center;
	    }
	  }
	  .dropdown-menu {
	  	.dropdown-item{
			text-decoration: none!important;
	  		font-size: 1.2rem;
  		    padding: 0px 25px;
  		    transition: .3s ease;
			color: $white;
  		    &:hover{
  		    	background: $black;
  		    	color: $gray;
  		    }
	  	}
		  background: $black;
		  color: $white;
	  	margin-top: 15;
	    border-radius:0;
	    opacity: 1;
	    padding: 0px 18px 18px 18px ;
	    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
	    transition:.3s all;
	    position: absolute;
	    display: block;
	    visibility: hidden;
	    opacity: 0;
	    transform: translateY(-40px);

	    transition: visibility 0.1s, opacity 0.1s, transform 200ms cubic-bezier(0.43, 0.26, 0.11, 0.99);
	    @include mobile {
	      transform:none;
	    }
	  }
	}
}

// bootstrap override
.navbar-toggler:focus, .navbar-toggler:hover{
	outline: none;
}

.navbar-toggler {
	padding: .55rem .55rem;
}

.nav-link, .dropdown-item {
  text-decoration: none!important;
}

